# superiorflows

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_unknown_20260115_112000.json  0002_unknown_20260115_112033.json  0003_unknown_20260115_112116.json  0004_unknown_20260115_112200.json  0005_fe0b2aff036bc82181d31c9099528f5948c19c4b_20260115_164316_uncommited-changes.json  0006_fe0b2aff036bc82181d31c9099528f5948c19c4b_20260115_164650_uncommited-changes.json  0007_cd8dd6512185ded80df89eee28739848d1781924_20260115_165010.json  0008_cd8dd6512185ded80df89eee28739848d1781924_20260117_161545_uncommited-changes.json  0009_cd8dd6512185ded80df89eee28739848d1781924_20260117_161859_uncommited-changes.json  0010_cd8dd6512185ded80df89eee28739848d1781924_20260117_162815_uncommited-changes.json  0011_cd8dd6512185ded80df89eee28739848d1781924_20260117_162838_uncommited-changes.json  0012_cd8dd6512185ded80df89eee28739848d1781924_20260117_163025_uncommited-changes.json  0013_cd8dd6512185ded80df89eee28739848d1781924_20260117_163051_uncommited-changes.json  0014_cd8dd6512185ded80df89eee28739848d1781924_20260117_163139_uncommited-changes.json  0015_cd8dd6512185ded80df89eee28739848d1781924_20260117_163205_uncommited-changes.json  0016_860fdad5de44e76476eb5444546ab537eb973227_20260117_163708_uncommited-changes.json  0017_860fdad5de44e76476eb5444546ab537eb973227_20260117_163825_uncommited-changes.json  0018_860fdad5de44e76476eb5444546ab537eb973227_20260117_163856_uncommited-changes.json  0019_860fdad5de44e76476eb5444546ab537eb973227_20260117_164004_uncommited-changes.json  0020_860fdad5de44e76476eb5444546ab537eb973227_20260117_164105_uncommited-changes.json  0021_300d28d89b20330c93613f0e12ab6701d0587987_20260118_105134_uncommited-changes.json  0022_300d28d89b20330c93613f0e12ab6701d0587987_20260118_105155_uncommited-changes.json  0023_300d28d89b20330c93613f0e12ab6701d0587987_20260118_105324_uncommited-changes.json  0024_5bc52b95657f6bbdb8c0ce1a8a8c5d49a7f78c98_20260120_105734_uncommited-changes.json  0025_5bc52b95657f6bbdb8c0ce1a8a8c5d49a7f78c98_20260120_105800_uncommited-changes.json  0026_5bc52b95657f6bbdb8c0ce1a8a8c5d49a7f78c98_20260120_110944_uncommited-changes.json  0027_5bc52b95657f6bbdb8c0ce1a8a8c5d49a7f78c98_20260120_114026_uncommited-changes.json  0028_48bc21a6714a74303a563e859d1945f13abd8961_20260120_115437_uncommited-changes.json  0029_48bc21a6714a74303a563e859d1945f13abd8961_20260120_115530_uncommited-changes.json  0030_48bc21a6714a74303a563e859d1945f13abd8961_20260120_120926_uncommited-changes.json  (+5 more)
.github/workflows/: ci.yml
experiments/: traj_energy.npy  traj_hybrid.npy  traj_mle.npy  traj_si.npy
notebooks/: callbacks_test.ipynb  implementation.ipynb  test.ipynb  text_test.ipynb  toy_particle.ipynb  trainers_test.ipynb
particle_systems/: callbacks_particles.py  evaluate_log_prob.py  particle_system.py  potentials.py  runs.sh  sampling_particles.py  test_benchmark_flow.py  test_egnn_velocity.py  test_equivariant_ot.py  test_particle_scripts.py  test_potentials.py  test_velocity.py  training_particles.py  velocities.py
particle_systems/config/: ml_mlp.json  (+3 more)
scripts/: 8_gaussians.py  compare_training_methods.py  debug_jax_compilation.py  dev_trainers.py  logo.py  profile_flow.py  show_benchmarks.py  toy_particles.py  trainers.py
tests/: test_analytical.py  test_diffrax_features.py  test_flow.py  test_import.py  test_jax_debug.py  test_particles.py  test_trainer.py
(+22 files in other folders)
