[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superiorflows"
version = "0.1.0"
description = "A flexible JAX library for continuous normalising flows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.7.0",
    "equinox>=0.13.2",
    "jax>=0.8.2",
    "distrax>=0.1.7",
    "orbax-checkpoint>=0.11.32",
    "tqdm>=4.67.1",
    "optax>=0.2.6",
    "typer>=0.21.1",
    "grain>=0.2.15",
]

[tool.hatch.build]
sources = ["src"]

[project.optional-dependencies]
monitoring = [
    "tensorboardX",
    "tensorboard>=2.18",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.14.10",
    "pre-commit>=4.0.1",
    "six>=1.16.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E741"]

